--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "workbench.colorCustomizations": {
-        "titleBar.activeBackground": "#3F708D",
-        "titleBar.inactiveBackground": "#3F708D"
-    }
+  "workbench.colorCustomizations": {
+    "titleBar.activeBackground": "#3F708D",
+    "titleBar.inactiveBackground": "#3F708D"
+  },
+  "explorer.compactFolders": false
 }
